--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -9,6 +9,14 @@ body,
   width: 100%;
   height: 100%;
 }
+.error-msg {
+  margin-bottom: 5px;
+  text-align: center;
+}
+.error-msg p {
+  font-size: 1.2em;
+  color: red;
+}
 .contentDashboard h1 {
   font-size: 1.6em;
   font-family: "hoverageregular", Helvetica, Arial, sans-serif;
@@ -6797,6 +6805,14 @@ button.close {
 .modal-open {
   overflow: hidden;
 }
+.modal-link h1 {
+  font-size: 1.4;
+  margin: 0;
+}
+.modal-link a {
+  font-size: 1.2em;
+  margin: 0;
+}
 .modal {
   display: none;
   overflow: hidden;
@@ -6879,8 +6895,14 @@ button.close {
 }
 .modal-footer {
   padding: 15px;
-  text-align: right;
+  text-align: center;
   border-top: 1px solid #e5e5e5;
+}
+.modal-footer span {
+  font-size: 2em;
+}
+.modal-footer span:hover {
+  cursor: hand;
 }
 .modal-footer .btn + .btn {
   margin-left: 5px;
@@ -6914,7 +6936,7 @@ button.close {
 }
 @media (min-width: 992px) {
   .modal-lg {
-    width: 900px;
+    width: 80%;
   }
 }
 .tooltip {
