--- a/app/views/modal.html
+++ b/app/views/modal.html
@@ -3,19 +3,71 @@
     <h3 class="modal-title">{{items.title}}</h3>
 </div>
 <div class="modal-body">
-
-
-    <div ng-show="'{{items.type}}'=='image'">
-        <img ng-src="{{rootUrl}}{{items.src}}">
+    <div ng-show="{{items.templateHtml}}">
+                {{items.templateHtml}}
     </div>
 
+
+
+
+
+ <section ng-controller="panelController as panel">
+  <ul class="nav nav-pills">
+
+    <li ng-class="{ active:panel.isSelected(1) }">
+       <a href ng-click="panel.selectTab(1)">Tab 1</a>
+    </li>
+
+    <li ng-class="{ active:panel.isSelected(2) }" ng-show="{{items.versionurl}}">
+      <a href ng-click="panel.selectTab(2)">Tab 2</a>
+    </li>
+
+    <li ng-class="{ active:panel.isSelected(3) }" ng-show="{{items.templateHtml}}">
+      <a href ng-click="panel.selectTab(3)">Tab 3</a>
+    </li>
+  </ul>
+
+<div class="panel" ng-show="panel.isSelected(1)">
+  <div ng-show="'{{items.type}}'=='image'">
+        <img ng-src="{{rootUrl}}{{items.src}}" class="img-responsive">
+    </div>
     <div ng-show="'{{items.type}}'=='video'">
-    <iframe ng-src="{{items.src}}" width="WIDTH" height="HEIGHT" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe ng-src="{{items.src}}" width="auto" height="auto" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
+</div>
+<div class="panel" ng-show="panel.isSelected(2)">
+ <div ng-show="'{{items.type}}'=='image'">
+        <img ng-src="{{rootUrl}}{{items.versionurl}}" class="img-responsive">
+    </div>
+
+</div>
+<div class="panel" ng-show="panel.isSelected(3)">
+    Tab 3 Content
+</div>
+   </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="modal-link">
+    <h1>En savoir plus ?</h1>
+    <a ng-href="http://www.gravatar.com/avatar/{{hash}}" target="_blank">http://www.gravatar.com/avatar/{{hash}}</a>
+    </div>
+
 
 
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    <span ng-click="cancel()">close</span>
 </div>
