--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -112,7 +112,7 @@
                   class="icon-{{action.type}} icon-actionlist icon-btn active" 
                   action-name="{{action.name}}" 
                   ng-click="updateActionDescription(action)"
-                  ng-class="{orange: !action.isAvailable}"></span>
+                  ng-class="{unavailable: !action.isAvailable}"></span>
                 </div>
 
               </section>
