Ajoutez la fonction pour noté un mafieux comme vu

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -24,6 +24,7 @@
                <p>description</p>
             </div>
          </div>
+         <button ng-click="openCredits()">Crédits</button>
       </div>
       <!-- \.descriptionLandingPage-->
       <!-- login form -->
