--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -1,96 +1,60 @@
 <nav id="header" class="navbar navbar-inverse navbar-fixed-top"  ng-controller="mainBarGameController">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" ng-controller="GameCoreCtrl"></a>
-        </div>
-
-
-
-
-        <div id="navbar" class="navbar-collapse collapse">
-
-          <div class="xp_wrapper col-md-1 col-md-offset-3">
-              
-            </div>
-
-
-            <div class="xp_wrapper col-md-4">
-
-             
-                <span class="xp">xp </span>
-                <span ng-bind="nbXP"></span><span>pts</span> <span ng-show="level<12">/</span> 
-                <span ng-bind="nextLvlXP" ng-show="level<12"></span><span ng-show="level<12">pts</span>
-               
-                <i class="glyphicon glyphicon-star userInfos"></i>
-                <span ng-bind="playerRank | uppercase"></span>
-                <span ng-bind="playerInfos"></span>
-
-
-
-
-                
-               
-                <div class="loader_wrap">
-                    <div class="fill" ng-style="progressBar">
-                    </div>
-                </div>
-            </div>
-
-
-
-
-             <ul class="nav navbar-nav notifResistance">
-        <li class="dropdown">
-          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="icoResistance glyphicon glyphicon-user"></i><i class="badge">99</i></a>
-          <ul class="dropdown-menu" role="menu">
-
-            <li>
-                <section class="row">
-                <div class="col-md-11">
-                  <h1>TitreNotife</h1>
-                  <p>Text...</p>
-                </div>
-                <div class="col-md-1 closeNotification">
-                  <a href="#"><span class="icon-cross"></span></a>                  
-                </div>
-
-                </section>
-
-            </li>
-
-             <li class="divider"></li>
-
-            
-             <li>
-               <section class="row">
-                <div class="col-md-11">
-                  <h1>TitreNotife</h1>
-                  <p>Text...</p>
-                </div>
-                <div class="col-md-1 closeNotification">
-                  <a href="#"><span class="icon-cross"></span></a>                  
-                </div>
-
-                </section>
-             
-         
-              
-            </li>
-
-            <li class="divider"></li>
-            <li class="moreNotification"><a href="">plus de notification</a></li>
-          </ul>
-        </li>
-      </ul>
-
-           
-
-
-
-            <ul class="nav navbar-nav navbar-right">
-                <li><a ng-href="#/" ng-click="logoutFunc()"><img src="img/logout.svg" height="30px" width="30px" alt="Logout" /></a></li>
-            </ul>
-        </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" ng-controller="GameCoreCtrl"></a>
     </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <div class="xp_wrapper col-md-1 col-md-offset-3">
+      </div>
+      <div class="xp_wrapper col-md-4">       
+        <span class="xp">xp </span>
+        <span ng-bind="nbXP"></span><span>pts</span> <span ng-show="level<12">/</span> 
+        <span ng-bind="nextLvlXP" ng-show="level<12"></span><span ng-show="level<12">pts</span>
+
+        <i class="glyphicon glyphicon-star userInfos"></i>
+        <span ng-bind="playerRank | uppercase"></span>
+        <span ng-bind="playerInfos"></span>       
+        <div class="loader_wrap">
+          <div class="fill" ng-style="progressBar">
+          </div>
+        </div>
+      </div>
+      <ul class="nav navbar-nav notifResistance">
+        <li class="dropdown">
+        <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="icoResistance icon-notification"></i><i class="badge">99</i></a>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <section class="row">
+                <div class="col-md-11">
+                  <h1>TitreNotife</h1>
+                  <p>Text...</p>
+                </div>
+                <div class="col-md-1 closeNotification">
+                  <a href="#"><span class="icon-cross"></span></a>                  
+                </div>
+              </section>
+            </li>
+            <li class="divider"></li>
+            <li>
+             <section class="row">
+              <div class="col-md-11">
+                <h1>TitreNotife</h1>
+                <p>Text...</p>
+              </div>
+              <div class="col-md-1 closeNotification">
+                <a href="#"><span class="icon-cross"></span></a>                  
+              </div>
+            </section>         
+          </li>
+          <li class="divider"></li>
+          <li class="moreNotification"><a href="">plus de notification</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a ng-href="#/" ng-click="logoutFunc()"><img src="img/logout.svg" height="30px" width="30px" alt="Logout" /></a></li>
+    </ul>
+  </div>
+</div>
 </nav>
 
