--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -42,7 +42,7 @@
                             <td>56%</td>
                         </tr>-->
                         <tr>
-                            <th>baisse</th>
+                            <th>Baisse d'influence</th>
                             <td>{{markerSelected.expectedDrop}}%</td>
                         </tr>
                         <tr>
