Infos actions tactic
Suppression de la propriété « influence prévue): seulement la vue

--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -35,12 +35,12 @@
               <th>XP min</th>
               <td>{{actionSelected.accessLevel}}</td>
             </tr>
-            <tr>
+            <!-- <tr>
               <th>Influence prévue</th>
               <td>{{actionSelected.sectorInfluence - actionSelected.expectedDrop}}%</td>
-            </tr>
+            </tr> -->
             <tr>
-              <th>baisse</th>
+              <th>Baisse d'influence</th>
               <td>{{actionSelected.expectedDrop}}%</td>
             </tr>
             <tr>
