croixDashboard, viré le glueBlue dégueulasse de googleChrome ...

--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -9,7 +9,7 @@
 
     <div class="col-md-11 col-md-offset-1">
       <div class="pannelClose"><!--close-->
-        <button ng-click="closeDashboard()"> <i class="glyphicon glyphicon-remove"></i> </button>
+        <button ng-click="closeDashboard()"> <i class="icon-cross"></i> </button>
       </div><!-- \. close -->
     </div>
 
