--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -10,7 +10,7 @@
 
         <div class="col-md-11 col-md-offset-1">
             <div class="pannelClose"><!--close-->
-                <button ng-click="closeDashboard()"> <i class="glyphicon glyphicon-remove"></i> </button>
+                <button ng-click="closeDashboard()"> <i class="icon-cross"></i> </button>
             </div><!-- \. close -->
         </div>
 
