Ajouté l'affichage de l'influence dans les actions de secteurs

--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -41,7 +41,7 @@
             </tr> -->
             <tr>
               <th>Baisse d'influence</th>
-              <td>{{actionSelected.expectedDrop}}%</td>
+              <td>{{actionSelected.influence}}%</td>
             </tr>
             <tr>
               <th>Dispoblie dans</th>
