--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -61,7 +61,7 @@
         <section class="col-md-offset-1 col-md-1" >
           <img src="{{sectorSelected.fullLinkImg}}" class="img-responsive img-round" alt="imageMafioso">
         </section>
-        <section class="col-md-4" >
+        <section class="col-md-4 sectorDescription" >
           <h1>{{sectorSelected.nomsquart}}</h1>
           <p>{{sectorSelected.character.sectorDescription}}</p>
 
