--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -20,7 +20,7 @@
       </div>
       <ul class="nav navbar-nav notifResistance">
         <li class="dropdown">
-        <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="icoResistance icon-notification"></i><!--<i class="badge">99</i>--></a>
+        <a href="" class="dropdown-toggle resistance-a" data-toggle="dropdown" role="button" aria-expanded="false"><i class="icoResistance icon-notification"></i><!--<i class="badge">99</i>--></a>
           <ul class="dropdown-menu" role="menu">
             <li>
               <section class="row">
