add make action point in desktop provisoire

--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -51,6 +51,14 @@
                         </tr>
                     </table>
                 </section> <!-- XP -->
+                
+                
+            <section class="col-md-2 col-md-offset-1 pull-down dash_btn">
+              <button 
+                type="button" 
+                class="btn btn-default btn-dash" 
+                ng-click="makeActionPoint()">EFFECTUER</button>
+            </section>
 
      
 
