--- a/app/views/mafia.html
+++ b/app/views/mafia.html
@@ -7,6 +7,7 @@
 					<span ng-if="!mafieu.available" class="icon-locked"></span>
 					{{mafieu.status}}
 				</h3>
+				<div class="spacer" ng-if="!(($index + 1) % 3)" />
 			</li>
 		</ul>
 	</div>
@@ -113,5 +114,15 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	<div id="help">
+		<div class="help_icon_wrap">
+			<div class="trigger">
+				<h1>?</h1>
+				<div class="tooltip_help">
+					<p>Blublublublublublublub blublublublub</p>
+				</div>
+			</div>
+		</div>	
 	</div>
 </div>
