--- a/app/views/modal_credits.html
+++ b/app/views/modal_credits.html
@@ -98,5 +98,5 @@
     </dl>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
+    <span ng-click="ok()">close</span>
 </div>
