--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -2,7 +2,16 @@
   <leaflet id="leafletMap" defaults="defaults" center="mapCenter" geojson="geojson" layers="layers" maxbounds="maxbounds" markers="markers"></leaflet>
 </div>
 
-
+<div id="help">
+		<div class="help_icon_wrap">
+			<div class="trigger">
+				<h1>?</h1>
+				<div class="tooltip_help">
+					<p>Blublublublublublublub blublublublub</p>
+				</div>
+			</div>
+		</div>	
+	</div>
 <!-- Fin contenu -->
 <footer ng-controller="ActionDashboardCtrl" ng-show="visible">
     <div class="navbar navbar-fixed-bottom dashboard-footer">
