--- a/app/views/documents.html
+++ b/app/views/documents.html
@@ -22,4 +22,14 @@
 
     </div><!---->
   </div>
+  <div id="help">
+		<div class="help_icon_wrap">
+			<div class="trigger">
+				<h1>?</h1>
+				<div class="tooltip_help">
+					<p>Blublublublublublublub blublublublub</p>
+				</div>
+			</div>
+		</div>	
+	</div>
 </div><!--\.contenu-->
