--- a/app/views/mafia.html
+++ b/app/views/mafia.html
@@ -20,7 +20,7 @@
 			<div ng-if="desc_available" class="mafieu_desc" ng-class="locked">
 				<div class="descHeader">
 					<img class="media-object" src="{{desc_portrait}}" alt="{{desc_nickname}}">
-					<h1>{{desc_lastname}} {{desc_firstname}} - <span>{{desc_nickname}}</span></h1>
+					<h1>{{desc_firstname}} {{desc_lastname}} - <span>{{desc_nickname}}</span></h1>
 					<h4>{{desc_status}}</h4>
 				</div>
 				<div class="desc_life">
