--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -738,8 +738,8 @@ div.header {
 }
 .mafia .mafiaList ul li .spacer {
   margin: 25px 0px;
-  height: 2px;
-  background: #333033;
+  height: 1px;
+  background: #eeece1;
   width: 90%;
 }
 .mafia .mafiaList ul li.active,
@@ -825,7 +825,9 @@ div.header {
 }
 .mafia .mafiaContent .content_wrapper .mafieu_desc .descHeader h1 span {
   color: #3e758e;
-  font-size: 0.7em;
+  font-family: 'fairviewregular';
+  text-transform: capitalize;
+  font-size: 0.9em;
 }
 .mafia .mafiaContent .content_wrapper .mafieu_desc .descHeader h4 {
   color: #14333d;
