--- a/app/views/mafia.html
+++ b/app/views/mafia.html
@@ -120,9 +120,9 @@
 			<div class="trigger">
 				<h1>?</h1>
 				<div class="tooltip_help">
-					<p>Dans cette section sont stockés tous les profils des membres de la mafia responsables d'un secteur, ainsi que celui du parrain.</p>
-					<p>Chaque fiche correspondant au responsable du secteur te sers fournie après un certains nombre d'actions réalisées dans ce secteur.</p>
-					<p>Le profil du boss pourra être débloqué quand tu attendras le grade de général.</p>
+					<p>Dans cette section sont stockés tous les profils des membres de la mafia responsables d'un secteur, ainsi que celui du parrain.
+					Chaque fiche correspondant au responsable du secteur te sers fournie après un certains nombre d'actions réalisées dans ce secteur.
+					Le profil du boss pourra être débloqué quand tu attendras le grade de général.</p>
 				</div>
 			</div>
 		</div>	
