--- a/app/views/login.html
+++ b/app/views/login.html
@@ -24,7 +24,7 @@
                <p>description</p>
             </div>
          </div>
-         <button ng-click="openCredits()">Crédits</button>
+         <button class="btn btn-default btn-credit" ng-click="openCredits()">Crédits</button>
       </div>
       <!-- \.descriptionLandingPage-->
       <!-- login form -->
