--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -7,7 +7,9 @@
 			<div class="trigger">
 				<h1>?</h1>
 				<div class="tooltip_help">
-					<p>Blublublublublublublub blublublublub</p>
+					<p>Dans cette section sont affichées toutes les actions géolocalisées.</p>
+                    <p>Tu peux de cette manière visualiser les détails, avoir une vue générale et créer ta stratégie.</p>
+                    <p>Aucune action n'est disponible depuis ton QG mais seulement depuis ton mobile.</p>
 				</div>
 			</div>
 		</div>	
