--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -5,7 +5,9 @@
 			<div class="trigger">
 				<h1>?</h1>
 				<div class="tooltip_help">
-					<p>Blublublublublublublub blublublublub</p>
+					<p>Dans cette section sont affichés tous les secteurs de la ville.</p>
+          <p>Pour chaque secteur tu peux voir ses détails avec le membre qui en est le responsable et le nombre d'actions à réaliser pour débloquer le profil.</p>
+          <p>Tu peux également voir l'influence de la mafia dans ce secteur, les actions à réaliser pour la réduire et les détails de chacunes.</p>
 				</div>
 			</div>
 		</div>	
